--- a/web/package.json
+++ b/web/package.json
@@ -9,19 +9,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
-    "@mui/material": "^5.10.13",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^5.15.14",
+    "@mui/system": "^5.15.14",
+    "@mui/x-date-pickers": "^6.20.2",
+    "@mui/x-date-pickers-pro": "^7.23.1",
     "@radix-ui/react-dialog": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.1",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.0.3",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.4.2",
+    "react-select": "^5.8.3",
     "react-toastify": "^9.0.8"
   },
   "devDependencies": {
